<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/tab_home"
        android:icon="@drawable/ic_nav_home"
        android:id="@+id/home_menu"/>
    <item
        android:title="@string/tab_library"
        android:icon="@drawable/ic_nav_library"
        android:id="@+id/Category_menu"/>
    <item
        android:title="@string/tab_quiz"
        android:icon="@drawable/ic_nav_quiz"
        android:id="@+id/Quiz_menu"/>
    <item
        android:title="@string/tab_progress"
        android:icon="@drawable/ic_nav_progress"
        android:id="@+id/Progress_menu"/>
    <item
        android:title="@string/tab_settings"
        android:icon="@drawable/ic_nav_settings"
        android:id="@+id/Settings_menu"/>
</menu>
