...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_lg"
                    android:hint="@string/subject"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actQuizSubject"
                        style="@style/Widget.AIMentor.DropdownText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:hint="@string/quiz_difficulty"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actQuizDifficulty"
                        style="@style/Widget.AIMentor.DropdownText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

...
