...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/library_subject_filter"
            app:endIconMode="dropdown_menu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/actSubjectFilter"
                style="@style/Widget.AIMentor.DropdownText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
...
